Revised step D to include the placeholder and used grammarly to fix my grammar issues in my project.

--- a/Charlotte.html
+++ b/Charlotte.html
@@ -46,7 +46,7 @@
                         class="img-fluid rounded mx-auto d-block w-50"
                         alt="Picture of Charlotte North Carolina">
 
-                    <p class="text-center fs-5">Nestled in the epicenter of North Carolina, Charlotte buzzes with activity as a city recognized for its Southern allure, economic vitality and cultural wealth. As it stands tall being both the biggest urban sprawl within the state lines and pivotal financial hub, this metropolis's remarkable skyline mirrors its economical importance. Moreover than just being a center of finance, Charlotte offers an eclectic assortment of culture through exquisite museums, flourishing arts scene, and vibrant culinary options which give one an expansive experience at charlotte. The magnetism that is inherent to "Queen City," stems from inviting neighborhoods intermingling perfectly with verdant slices  f nature interspersed throughout , not forgetting their relentless dedication towards encouraging community involvement.This perfect blend makes   Queen city  strikingly appealing by effortlessly merging chic sophistication found in cities complementing that quintessential southern warmth.</p>
+                    <p class="text-center fs-5">Nestled in the epicenter of North Carolina, Charlotte buzzes with activity as a city recognized for its Southern allure, economic vitality, and cultural wealth. As it stands tall, being the most significant urban sprawl within the state lines and a pivotal financial hub, this metropolis's remarkable skyline mirrors its economic importance. Moreover, rather than just being a center of finance, Charlotte offers an eclectic assortment of culture through exquisite museums, a flourishing arts scene, and vibrant culinary options, giving one an expansive experience at Charlotte. The magnetism inherent to "Queen City" stems from inviting neighborhoods intermingling perfectly with verdant slices of nature interspersed throughout, not forgetting their relentless dedication towards encouraging community involvement. This perfect blend makes 'Queen City' strikingly appealing by effortlessly merging chic sophistication found in cities, complementing that quintessential southern warmth.</p>
                 </div>
             </div>
         </header>
@@ -111,9 +111,9 @@
                                 <h2>Fun Things To Do!</h2>
                                 <!-- an HTML-coded unordered list with at least three list items -->
                                 <ul>
-                                    <li>Visit the Nascar Hall of Fame Museum</li>
-                                    <li>Go see the Carolina Panthers at the Bank Of America Stadium</li>
-                                    <li>Ride a RollerCoaster at Carowinds</li>
+                                    <li>Visit the Nascar Hall of Fame Museum.</li>
+                                    <li>Go see the Carolina Panthers at the Bank Of America Stadium.</li>
+                                    <li>Ride a RollerCoaster at Carowinds.</li>
                                 </ul>
                             </div>
                         </div>
