--- a/Raleigh.html
+++ b/Raleigh.html
@@ -39,11 +39,11 @@
             <!--  a relevant image, including alternative text for the image -->
             <img src="./images/raleigh.jpg" class="img-fluid rounded mx-auto d-block w-50" alt="Picture of Raleigh North Carolina">
 
-            <p class="text-center fs-5">In the heart of North Carolina, Raleigh bursts with energy as an evolving capital city that masterfully marries Southern allure and tech-savvy ingenuity. With its thriving financial health, globally respected educational institutions, and creatively enriched ambiance - it's no wonder this metropolis persistently clinches top spots for living standards and professional prospects!
+            <p class="text-center fs-5">In the heart of North Carolina, Raleigh bursts with energy as an evolving capital city that masterfully marries Southern allure and tech-savvy ingenuity. With its thriving financial health, globally respected educational institutions, and creatively enriched ambiance, it is no wonder this metropolis persistently clinches top spots for living standards and professional prospects!
 
-              Nestled in Raleigh is the famed Research Triangle Park—an epicenter characterized by trailblazing investigations—making it a magnet to professionals on both scientific research fronts or academic grounds! Spend time exploring districts like Mordecai or Fayetteville Street. It lets you travel back into times past while feasting your eyes upon modern infrastructure scattered across town exhibiting their dedication towards balanced urban growth.
+              Nestled in Raleigh is the famed Research Triangle Park—an epicenter characterized by trailblazing investigations—making it a magnet to professionals on both scientific research fronts and academic grounds! Spend time exploring districts like Mordecai or Fayetteville Street. It lets you travel back into times past while feasting your eyes upon modern infrastructure scattered across town exhibiting their dedication towards balanced urban growth.
               
-              Sprinkled generously are bits from every entertainment genre—a multitude of museum exhibits narrating tales untold; lush parks promising tranquility amidst suburban hustle-bustle—all tucked delicately within arm’s reach. Inheriting historic roots yet embracing progression,Raleigh presents itself as an enticing enclave uniting rich customs alongside fresh wave innovative charm making it irresistible whether you're calling this place home sweet home–or simply stopping by!</p>
+              Sprinkled generously are bits from every entertainment genre—many museum exhibits narrating tales untold; lush parks promising tranquility amidst suburban hustle-bustle—all tucked delicately within arm's reach. Inheriting historical roots yet embracing progression, Raleigh presents itself as an enticing enclave uniting rich customs alongside fresh wave innovative charm, making it irresistible whether you call this place home sweet home–or stop by!</p>
           </div>
         </div>
       </header>
@@ -111,14 +111,14 @@
                       <h2>Fun Things To Do!</h2>
                       <!-- an HTML-coded ordered list with at least three list items -->
                       <ol>
-                        <li>Visit the North Carolina Museum of Art</li>
-                        <li>Go see the Carolina Hurricanes play at the PNC Arena</li>
-                        <li>Look and eat at the tasty fruits/vegetables at the State Farmers Market</li>
+                        <li>Visit the North Carolina Museum of Art.</li>
+                        <li>Go see the Carolina Hurricanes play at the PNC Arena.</li>
+                        <li>Look and eat at the tasty fruits/vegetables at the State Farmers Market.</li>
                       </ol>
                       <!-- one ID selector to format specific elements of a page -->
                       <div class="relative-content">
                       GO CAROLINA HURRICANES!
-                      <a href="https://www.nhl.com/hurricanes/tickets/?gad_source=1&gclid=CjwKCAiApuCrBhAuEiwA8VJ6JmsUHyxts94xWvHlV8aCPE5SKV9lA9RdOHHhcWo71NPBpR08cNsvjhoCvT0QAvD_BwE" target="_blank">Purchase tickets to a Hurricanes game</a>
+                      <a href="https://www.nhl.com/hurricanes/tickets/?gad_source=1&gclid=CjwKCAiApuCrBhAuEiwA8VJ6JmsUHyxts94xWvHlV8aCPE5SKV9lA9RdOHHhcWo71NPBpR08cNsvjhoCvT0QAvD_BwE" target="_blank">Purchase tickets to a Hurricanes game!</a>
 
                       </div>
                     </div>
