--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
           <h1 class="display-5 fw-bold text-center">Welcome to North Carolina!</h1>
           <!--  a relevant image, including alternative text for the image -->
           <img src="./images/FlagNC.jpg" class="img-fluid rounded mx-auto d-block w-50" alt="Picture of the flag of North Carolina">
-          <p class="text-center fs-5">Situated in the southeastern corner of America, North Carolina is a state that perfectly blends the old and new. It's one of those sought-after places where over 10 million folks have decided to set up home, making it amongst top ten most populated states nationwide! Back on November 21st,1789 was when this grand ol' place joined hands with Union family, Ever since then its influence has been rippling through times till today. Politics? Culture? They thrive here - just take Raleigh for instance; US wouldn't be the same without contributions from NC's capital! Scenic-wise too you'd find variety like nowhere else – towering Blue Ridge Mountains at one end while idyllic Outer Banks rest peacefully on other end . If there was a prize for blending history, culture, economic prowess into some kind historic-cultural-economic smoothie, undoubtedly North Carolina would bag it effortlessly!</p>
+          <p class="text-center fs-5">Situated in the southeastern corner of America, North Carolina is a state that perfectly blends the old and new. It is one of those sought-after places where over 10 million folks have decided to set up home, making it amongst the top ten most populated states nationwide! On November 21st, 1789, this grand ol' place joined hands with the Union family; ever since then, its influence has been rippling through times till today. Politics? Culture? They thrive here - take Raleigh, for instance; the US would not be the same without contributions from NC's capital! Scenic-wise, too, you would find variety like nowhere else – towering Blue Ridge Mountains at one end while idyllic Outer Banks rest peacefully on the other end. If there were a prize for blending history, culture, and economic prowess into some historic-cultural-economic smoothie, undoubtedly, North Carolina would bag it effortlessly!</p>
         </div>
       </div>
     </header>
@@ -51,7 +51,7 @@
             <div class="c-md-6">
               <div class="h-100 p-5 text-bg-dark rounded-3">
                 <h2>The Tarheel State</h2>
-                <p>You might often hear North Carolina being called the "Tar Heel State." This nickname originates from murky historical roots, going as far back as the 19th century. Though there are a few ideas floating around about how it started, one of them is fairly popular: It's related to when our nation was divided during the Civil War. The soldiers from North Carolina, especially ones close to shore, were admired for their unyielding courage and grit on battlefields. As legend tells us, these brave individuals stayed so steady in heated battles that they seemed rooted down with sticky tar on their heels like glue! So aptly dubbed 'tar heeled,' this phrase became an embodiment of honor and state pride for folks here in NC over time and we love using it till now because symbolizes just how resilient Tar Heels always have been and always will be!</p>
+                <p>You might often hear North Carolina called the "Tar Heel State." This nickname originates from murky historical roots, going as far back as the 19th century. Though a few ideas are floating around about how it started, one of them is famous: It is related to when our nation was divided during the Civil War. The North Carolina soldiers, especially those close to shore, were admired for their unyielding courage and grit on battlefields. As legend tells us, these brave individuals stayed so steady in heated battles that they seemed rooted down with sticky tar on their heels like glue! So aptly dubbed 'tar heeled,' this phrase has become an embodiment of honor and state pride for folks here in NC over time, and we love using it till now because it symbolizes just how resilient Tar Heels have always been and always will be!</p>
               </div>
             </div>
           </section>
@@ -62,7 +62,7 @@
           <aside>
             <div class="row-md-6">
               <div class="h-100 p-5 bg-body-tertiary border rounded-3">
-                <h2>Explore the official North Carolina website by following the link provided below.</h2>
+                <h2>Explore the official North Carolina website by following the link provided below!</h2>
                 <!-- a link that opens an external website in a new window or tab using the target attribute -->
                 <button class="btn btn-outline-secondary" type="button"> <a href="https://www.visitnc.com/" target="_blank">Visit North Carolina</a>
                 </button>
