--- a/Asheville.html
+++ b/Asheville.html
@@ -36,11 +36,11 @@
           <h1 class="display-5 fw-bold text-center">Welcome to Asheville!</h1>
             <!--  a relevant image, including alternative text for the image -->
           <img src="./images/asheville.jpg" class="img-fluid rounded mx-auto d-block w-50" alt="Picture of Asheville North Carolina">
-          <p class="text-center fs-5">Immersed deep within the scenic vistas of Blue Ridge Mountains, Asheville in North Carolina splendidly upholds its image as a dynamic and culturally thriving city. Renowned for harmonizing historic allure with progressive gusto, this robust locale never fails to impress! With an animated arts sphere, distinct architecture choices and generous locals - it's always buzzing with creative energy. Artists find their muse here; musicians get inspired while outdoor adventurers feel right at home!
+          <p class="text-center fs-5">Immersed deep within the scenic vistas of the Blue Ridge Mountains, Asheville in North Carolina splendidly upholds its image as a dynamic and culturally thriving city. Renowned for harmonizing historic allure with progressive gusto, this robust locale never fails to impress! With an animated arts sphere, distinct architecture choices, and generous locals - it is always buzzing with creative energy. Artists find their muse here; musicians get inspired, while outdoor adventurers feel at home!
 
-            The famed Biltmore Estate calls Asheville home too; being the largest privately-owned property across America tastefully injects luxe into local life here. The natural resplendence is beautifully balanced by diversity-filled gourmet retreats that offer everything from fine dining experiences to locally brewed beverages.
+            The famed Biltmore Estate calls Asheville home, too; being the most prominent privately-owned property across America, it tastefully injects luxe into local life here. The natural resplendence is beautifully balanced by diversity-filled gourmet retreats that offer everything from fine dining experiences to locally brewed beverages.
             
-            Asheville not only appreciates art but also holds sustainability close to heart – twin attributes that give visitors pause initially then hooks them indefinitely! Be ready for anything when you visit...in essence, escape mundane reality because every moment spent amid these glorious stretches of Appalachian beauty ends up fueling inspiration where typically none would have existed prior!</p>
+            Asheville appreciates art and holds sustainability close to heart – twin attributes that give visitors pause initially, then hook them indefinitely! Be ready for anything when you visit...in essence, escape mundane reality because every moment spent amid these glorious stretches of Appalachian beauty fuels inspiration where typically none would have existed prior!</p>
         </div>
       </div>
     </header>
@@ -114,19 +114,19 @@
                   </thead>
                   <tbody>
                     <tr>
-                      <td>Drive along the Blue Ridge Parkway and see the beautiful mountains</td>
-                      <td>Unleash your inner foodie by jumping onto a gastronomic journey with a local food tour</td>
-                      <td>Check out the fine art exhibits at the Asheville Art Museum</td>
+                      <td>Drive along the Blue Ridge Parkway and see the beautiful mountains.</td>
+                      <td>Unleash your inner foodie by jumping onto a gastronomic journey with a local food tour.</td>
+                      <td>Check out the fine art exhibits at the Asheville Art Museum.</td>
                     </tr>
                     <tr>
-                      <td>Go waterfall hunting and soak your feet in the water</td>
-                      <td>Asheville is a special place for craft-brew enthusiasts.With more breweries per capita than any other city, you’ll have plenty of options to consider.</td>
-                      <td>Take in the pulsating arts scene of the city with a live show at Diana Wortham Theatre</td>
+                      <td>Go waterfall hunting and soak your feet in the water.</td>
+                      <td>Unique place for craft-brew enthusiasts. With more breweries per capita than any other city, you will have plenty of options to consider.</td>
+                      <td>Take in the pulsating arts scene of the city with a live show at Diana Wortham Theatre.</td>
                     </tr>
                     <tr>
                       <td>Visit the highest point east of the Mississippi, Mt. Mitchell</td>
                       <td>Sip the mountain’s finest nectar while visiting urban and rural wineries, or go for a free tasting at Biltmore, the most visited winery in America.</td>
-                      <td>Embark on a daylong adventure in the heart of Asheville's lively arts scene - the River Arts District (RAD)</td>
+                      <td>Embark on a daylong adventure in the heart of Asheville's lively arts scene, the River Arts District (RAD).</td>
                     </tr>
                   </tbody>
                 </table>
