--- a/contact.html
+++ b/contact.html
@@ -72,7 +72,7 @@
                 </div>
                 <div class="mb-3">
                     <label for="question" class="form-label">Any Question/Comment You Might Have For Us</label>
-                    <textarea class="form-control" id="question" rows="3" placeholder="I Love North Carolina!"></textarea>
+                    <textarea class="form-control" id="question" rows="3" placeholder="I Love North Carolina! PS We love your website :)"></textarea>
                 </div>
                 <button type="submit" class="btn btn-primary">Submit</button>
             </form>
